# Webreport_Racing_F1_Flask

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
packaging_tutorial/: README.md  pyproject.toml  requirement.txt  requirements.txt
packaging_tutorial/data/: expected_output.txt  monaco.db  monaco_sqlite.db
packaging_tutorial/report_FEDONYUK/: db_util.py  models.py  proba.py  report.py  report_api.py  report_cli.py  report_web.py  sqlite_creation.py  utils.py
packaging_tutorial/report_FEDONYUK/Swagger/: swagger.yml
packaging_tutorial/report_FEDONYUK/static/: style.css
packaging_tutorial/report_FEDONYUK/templates/: base.html  drivers.html  report.html
packaging_tutorial/tests/: test_api.py  test_db.py  test_models.py  test_report.py  test_web.py
