[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Webreport Racing Monaco F1 Flask"
version = "1.0.0"
authors = [{ name = "Fedonyuk Anatoliy", email = "dekorstyle0@gmail.com" }, ]
description = """This version of our application, converting and storing the data to the data base."""
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[project.urls]
"Homepage" = "https://github.com/Anatoliy-Fedonyuk/Webreport_Racing_F1_Flask"
"Bug Tracker" = "https://github.com/Anatoliy-Fedonyuk/Webreport_Racing_F1_Flask/issues"