[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Monaco 2018 Racing Report API"
version = "1.0.0"
authors = [{ name = "Fedonyuk Anatoliy", email = "dekorstyle0@gmail.com" }, ]
description = """API for generating reports of Monaco 2018 Racing. Report-based web-report using flask """
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[project.urls]
"Homepage" = "https://git.foxminded.ua/foxstudent105007/task-8-rest-api-report-of-monaco-2018-racing"
"Bug Tracker" = "https://git.foxminded.ua/foxstudent105007/task-8-rest-api-report-of-monaco-2018-racing/-/issues"